# bf4

./: .gitignore  CMakeLists.txt  README.md
backends/analysis/: CMakeLists.txt  DataDependencies.cpp  DataDependencies.h  DependencyGraph.cpp  DependencyGraph.h  ExternSpecialization.cpp  ExternSpecialization.h  HandleHeaders.cpp  HandleHeaders.h  HandleStacks.cpp  HandleStacks.h  ImplementPacket.cpp  ImplementPacket.h  InlineActionsInControls.cpp  InlineActionsInControls.h  InstantiatePackageModels.cpp  InstantiatePackageModels.h  Interpreter.cpp  Interpreter.h  MakeImplementations.cpp  MakeImplementations.h  MakeStateless.cpp  MakeStateless.h  PackageSpecialization.cpp  PackageSpecialization.h  ParsersUnroll.cpp  ParsersUnroll.h  README.md  RemoveBuiltins.cpp  RemoveBuiltins.h  RemoveTableCalls.cpp  RemoveTableCalls.h  RenameMethods.cpp  RenameMethods.h  RenderTemplate.cpp  RenderTemplate.h  SpecializeExternFunctions.cpp  SpecializeExternFunctions.h  TypeConstructors.cpp  TypeConstructors.h  (+43 more)
backends/analysis/analysis_server/: DatabaseServer.cpp  DatabaseServer.h  ProgramDatabase.cpp  ProgramDatabase.h
backends/analysis/bvset/: bvset.cpp  bvset.h
backends/analysis/commands/: CommandParser.cpp  CommandParser.h  InstantiateCommands.cpp  InstantiateCommands.h
backends/analysis/constprop/: ConstantPropagation.cpp  ConstantPropagation.h  ConstantPropagationAgain.cpp  ConstantPropagationAgain.h  constant_propagation.cpp  constant_propagation.h
backends/analysis/context/: Context.cpp  Context.h  InterproceduralCFGs.cpp  InterproceduralCFGs.h
backends/analysis/gen-cpp/: p4_api_constants.cpp  p4_api_constants.h  p4_api_types.cpp  p4_api_types.h  p4_service.cpp  p4_service.h  p4_service_server.skeleton.cpp
backends/analysis/lattice/: Lattice.cpp  Lattice.h
backends/analysis/mutexhdrs/: MutexInstrument.cpp  MutexInstrument.h
backends/analysis/template/: GenerateMethods.cpp  GenerateMethods.h
backends/analysis/tofino/: TofinoIntegration.cpp  TofinoIntegration.h
backends/analysis/ub/: AnalysisContext.cpp  AnalysisContext.h  BugReport.cpp  BugReport.h  ControlLattice.cpp  ControlLattice.h  ExplicitUB.cpp  ExplicitUB.h  ExpressionCanonicalizer.cpp  ExpressionCanonicalizer.h  IOLattice.cpp  IOLattice.h  KeyAdder.cpp  KeyAdder.h  PropagateFormulas.cpp  PropagateFormulas.h  ReachingDefinitions.cpp  ReachingDefinitions.h  RemovePacketLookahead.cpp  RemovePacketLookahead.h  StorageLattice.cpp  StorageLattice.h  UBLattice.cpp  UBLattice.h  loop.cpp  loop.h  ssa.cpp  ssa.h  symbex.cpp  symbex.h  variables.cpp  variables.h
backends/analysis/ub/bmv2/: EgressSpecNotSet.cpp  EgressSpecNotSet.h
backends/bmv2/: CMakeLists.txt
backends/bmv2/common/: options.h
backends/bmv2/simple_switch/: PSAConverter.cpp  PSAConverter.h  main.cpp  midend.cpp  midend.h  psa_template.p4  simpleSwitch.cpp
backends/graphs/: CMakeLists.txt  p4c-graphs.cpp
frontends/: CMakeLists.txt
frontends/common/: constantFolding.cpp
frontends/common/resolveReferences/: resolveReferences.cpp  resolveReferences.h
frontends/p4/: callGraph.h  cloner.h  def_use.cpp  def_use.h  defaultArguments.h  hierarchicalNames.cpp  methodInstance.cpp  methodInstance.h  moveDeclarations.cpp  moveDeclarations.h  specialize.cpp  uniqueNames.cpp  uniqueNames.h  unusedDeclarations.cpp  unusedDeclarations.h
frontends/p4/evaluator/: evaluator.cpp
frontends/p4/toP4/: toP4.cpp  toP4.h
frontends/p4/typeChecking/: typeChecker.cpp  typeChecker.h
frontends/parsers/p4/: p4lexer.ll  p4parser.ypp
midend/: interpreter.cpp  interpreter.h  parserUnroll.cpp  parserUnroll.h  predication.cpp  simplifyKey.h
p4include/: analysis.p4  core.p4  v1model.p4
sigcomm-2020/: analyze.sh  cleanup_v1.py  kitchen_work.sh  run.py  run.sh  run_exps.py
sigcomm-2020/running_example/: running.p4
test/gtest/: source_file_test.cpp
testdata/p4_14_errors/: dangling.p4  dangling16.p4  dangling16_2.p4  issue-FrontEnd_54_FrontEndLast.p4  issue.p4  issue16.p4  issue_bad16-FrontEnd_54_FrontEndLast.p4
